Added a Table to page two that displays some HTML Tags and Attributes I've learned about so far. Added color, borders, and changed the font style of the table in a CSS style page. Went back on the previous pages and changed the titles to the right title names.

--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Page 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -51,7 +51,7 @@
   </nav>
 
   <footer>
-    <!-- I'm using fake organization company here-->
+    <!-- I'm using fake organization company here and don't want to put my phone number in case other people start calling me-->
     <p>Contact Information:<br>
       Robert Gleason<br>
       CybersecurityCompany.org
