--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Page 2</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -14,8 +14,37 @@
   </header>
   
   <main>
-    <h1>Welcome to my Website</h1>
-    <p>In this project I will be demonstrating the skills I've learned thought my Internet Programming class so far.</p>
+    <h1>Page 1</h1>
+    <h2>Table of Some Tags and Attributes I've learned</h2>
+    <p>Here is a table of some HTML tags and attributes that I've learned so far in class.</p>
+    <table >
+        <thead>
+          <th> HTML Tags</th>
+          <th>HTML Attributes</th>
+        </thead>
+      <tbody>
+        <th>
+          <ul>
+            <li>&lt;h1&gt;</li>
+            <li>&lt;p&gt;</li>
+            <li>&lt;img&gt;</li>
+            <li>&lt;li&gt;</li>
+            <li>&lt;ol&gt;</li>
+          </ul>
+        </th>
+        <th>
+          <ol>
+            <li>src</li>
+            <li>href</li>
+            <li>class</li>
+            <li>id</li>
+            <li>type</li>
+          </ol>
+        </th>
+      </tbody>
+      
+      
+    </table>
   </main>
 
   <nav>
@@ -26,7 +55,7 @@
   </nav>
 
   <footer>
-    <!-- I'm using fake organization company here-->
+    <!-- I'm using fake organization company here and don't want to put my phone number in case other people start calling me-->
     <p>Contact Information:<br>
       Robert Gleason<br>
       CybersecurityCompany.org
