--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Home Page</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -26,7 +26,7 @@
   </nav>
 
   <footer>
-    <!-- I'm using fake organization company here-->
+    <!-- I'm using fake organization company here and don't want to put my phone number in case other people start calling me-->
     <p>Contact Information:<br>
       Robert Gleason<br>
       CybersecurityCompany.org
