Added a bunch of different CSS and HTML code to edit the design of the pages. Each page now has a link to the CSS style page.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--Robert Gleason-->
+<!--9/25/2023-->
+<!--CPSC 2125-->
 <!DOCTYPE html>
 <html>
 
@@ -9,32 +12,37 @@
 </head>
 
 <body>
-  <header>
-    <img src="images/cybersecuritybanner.jpeg">
-  </header>
-  
-  <main>
-    <h1>Welcome to my Website</h1>
-    <p>In this project I will be demonstrating the skills I've learned thought my Internet Programming class so far.</p>
-  </main>
-
-  <nav>
-    <ul>
-      <li><a href="page1.html">Page 1</a></li>
-      <li><a href="page2.html">Page 2</a></li>
-    </ul>
-  </nav>
-
-  <footer>
-    <!-- I'm using fake organization company here and don't want to put my phone number in case other people start calling me-->
-    <p>Contact Information:<br>
-      Robert Gleason<br>
-      CybersecurityCompany.org
-    </p>
-  </footer>
-
-
-
+  <div class="layout">
+    <div class="header">
+      <header>
+        <img src="images/cybersecuritybanner.jpeg">
+        <h1>Welcome to my Website</h1>  
+      </header>
+    </div>
+    <div class="main">
+      <main>
+        <p>In this project I will be demonstrating the skills I've learned thought my Internet Programming class so far.</p>
+      </main>
+    </div>
+    <div class="nav">
+      <nav>
+        <ul>
+          <li><a href="page1.html">Page 1</a></li>
+          <li><a href="page2.html">Page 2</a></li>
+          <li><a href=style.css>Style Sheet</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer">
+      <footer>
+      <!-- I'm using fake organization company here and don't want to put my phone number in case other people start calling me-->
+        <p>Contact Information:<br>
+        Robert Gleason<br>
+        CybersecurityCompany.org
+        </p>
+      </footer>
+    </div>
+  </div>
 </body>
 
 </html>
