--- a/page1.html
+++ b/page1.html
@@ -56,6 +56,7 @@
       <ul>
         <li><a href="index.html">Home Page</a></li>
         <li><a href="page2.html">Page 2</a></li>
+        <li><a href="page3.html">Page 3</a></li>
         <li><a href=style.css>Style Sheet</a></li>
       </ul>
     </nav>
