--- a/page2.html
+++ b/page2.html
@@ -57,6 +57,7 @@
     <ul>
       <li><a href="index.html">Home Page</a></li>
       <li><a href="page1.html">Page 1</a></li>
+      <li><a href="page3.html">Page 3</a></li>
       <li><a href=style.css>Style Sheet</a></li>
     </ul>
   </nav>
